# capport

./: .env.example  .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: ci.yml
capport_core/: Cargo.toml
capport_core/src/: lib.rs
capport_core/src/context/: envvar.rs  logger.rs  mod.rs  model.rs  pipeline.rs  runner.rs  task.rs  transform.rs
capport_core/src/logger/: common.rs  writer.rs
capport_core/src/model/: common.rs
capport_core/src/parser/: config.rs  drop.rs  join.rs  logger.rs  mod.rs  model.rs  pipeline.rs  runner.rs  select.rs  sql.rs  transform.rs
capport_core/src/pipeline/: common.rs  context.rs  mod.rs  runner.rs
capport_core/src/service/: noop.rs
capport_core/src/task/: mod.rs  noop.rs  transform.rs
capport_core/src/task/loadstore/: csv.rs
capport_core/src/task/requests/: http.rs
capport_core/src/transform/: action.rs  common.rs  drop.rs  expr.rs  join.rs  mod.rs  select.rs  sql.rs
capport_core/src/util/: args.rs  common.rs  error.rs  json.rs  mod.rs  tmp.rs
capport_default/: Cargo.toml
capport_default/src/: main.rs
capport_service/: Cargo.toml
capport_service/src/: lib.rs
capport_service/src/context/: service.rs  task.rs
capport_service/src/pipeline/: context.rs
capport_service/src/service/: mod.rs  mongo.rs  sql.rs
capport_service/src/task/: mongo.rs
capport_service/src/util/: common.rs  error.rs
capport_service/tests/: common.rs  mongo.rs  sql.rs
cargo_service/: Cargo.toml
cargo_service/src/: lib.rs
cargo_service/src/pipeline/: context.rs
cargo_service/src/services/: common.rs  error.rs  mod.rs  mongo.rs
cargo_service/src/util/: common.rs
config/: canadian_players.csv  clean_nhl_goals.csv  clean_nhl_scores.csv  combined_game_day.yml  game_day.yml  model.yml  nhl_api.json  nhl_player_ids.csv  pipeline.json  pipeline.yml  pipeline_tasks.yml  raw_nhl_scores.json  runner_logger.yml  scoreboard.csv  service.yml  state_province.csv  test.yml  transform.yml
config/example/: nhl_player_ids.csv  pipeline.yml  player.csv  puckdata.csv  team.csv  transform.yml
config/example_http_single_request/: game.csv  pipeline.yml  player.csv  player_trunc.csv  shift_charts.csv  team.csv
cp-core/: Cargo.toml
cp-ext/: Cargo.toml
cp_core/: Cargo.toml
cp_core/src/: lib.rs
cp_core/src/context/: common.rs  connection.rs  envvar.rs  logger.rs  mod.rs  model.rs  pipeline.rs  request.rs  sink.rs  source.rs  transform.rs
cp_core/src/frame/: common.rs  mod.rs  polars.rs
cp_core/src/logger/: common.rs
cp_core/src/model/: common.rs
cp_core/src/parser/: action.rs  common.rs  connection.rs  dtype.rs  expr.rs  filter_fields.rs  http.rs  jtype.rs  keyword.rs  logger.rs  merge_type.rs  mod.rs  model.rs  run_mode.rs  sql_connection.rs  task_type.rs
cp_core/src/pipeline/: common.rs  context.rs  mod.rs  pipeline.rs  results.rs  signal.rs
cp_core/src/result/: common.rs
cp_core/src/runner/: common.rs
cp_core/src/task/: action.rs  config.rs  mod.rs  stage.rs
cp_core/src/task/request/: common.rs  config.rs  http.rs  http_batch.rs  http_single.rs  mod.rs
cp_core/src/task/sink/: clickhouse.rs  common.rs  config.rs  csv.rs  json.rs  mod.rs  postgres.rs
cp_core/src/task/source/: common.rs  config.rs  csv.rs  http.rs  json.rs  mod.rs  mongo.rs  sql.rs
cp_core/src/task/transform/: action.rs  common.rs  config.rs  drop.rs  join.rs  mod.rs  select.rs  sql.rs  time.rs  uniform_id.rs  unnest.rs  with.rs
cp_core/src/util/: args.rs  common.rs  error.rs  mod.rs  test.rs  tmp.rs
cp_demo/: Cargo.toml
cp_demo/src/: main.rs
cp_ext/: Cargo.toml
docs/: context.md  data.md  envvar.md  index.html  logger.md  pipeline.md  service.md  source_sink.md  task.md  transform.md
docs/drawio/: dataframe-msg-system.xml
src/: lib.rs  main.rs
src/config/: common.rs  mod.rs  model.rs  pipeline.rs  transform.rs
src/config/parser/: common.rs  drop.rs  join.rs  mod.rs  model.rs  pipeline.rs  select.rs  transform.rs
src/context/: common.rs  mod.rs  model.rs  pipeline.rs  task.rs  transform.rs
src/model/: common.rs
src/parser/: common.rs  config.rs  drop.rs  join.rs  model.rs  pipeline.rs  select.rs  transform.rs
src/pipeline/: common.rs  context.rs  mod.rs  results.rs  runner.rs  task.rs
src/service/: mod.rs
src/task/: common.rs  mod.rs  noop.rs  transform.rs
src/task/loadstore/: csv.rs
src/task/transform/: action.rs  common.rs  drop.rs  expr.rs  join.rs  mapping.rs  mod.rs  select.rs
src/transform/: action.rs  common.rs  drop.rs  expr.rs  join.rs  select.rs
src/util/: common.rs  error.rs  mod.rs  tmp.rs
