[package]
name = "capport_core"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
chrono-tz = "0.10.3"
polars = { version = "0.46.0", features = [
    'lazy',
    'csv',
    'json',
    'polars-io',
    'concat_str',
    'strings',
] }
polars-lazy = { version = "0.46.0", features = ['dtype-struct'] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ['blocking'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ['rt', 'net'] }

[dev-dependencies]
httpmock = "0.7.0-rc.1"

[lints.rust]
# unused_variables = "allow"
# unused_imports = "allow"
# dead_code = "allow"
