[package]
name = "capport_core"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
chrono = { version = "0.4", features = ['serde'] }
chrono-tz = "0.10.3"
fern = { version = "0.7.1", features = ['date-based', 'colored'] }
log = "0.4.27"
flexi_logger = "0.30.1"
polars = { version = "0.46.0", features = [
    'lazy',
    'csv',
    'json',
    'polars-io',
    'concat_str',
    'strings',
    'sql',
] }
polars-lazy = { version = "0.46.0", features = ['dtype-struct'] }
polars-sql = { version = "0.46.0" }
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ['blocking'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ['rt', 'net'] }

[dev-dependencies]
httpmock = "0.7.0-rc.1"

[lints.rust]
# unused_variables = "allow"
# unused_imports = "allow"
# dead_code = "allow"
