[package]
name = "cp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
async-trait = "0.1.88"
async-broadcast = "0.7.2"
chrono = { version = "0.4", features = ['serde'] }
crossbeam = "0.8.4"
fern = { version = "0.7.1", features = ['date-based', 'colored'] }
futures = "0.3.31"
log = "0.4.27"
multiqueue = "0.3.2"
polars = { version = "0.46.0", features = [ 'lazy', 'concat_str', 'strings', 'sql', 'json', 'csv' ] }
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ['rt', 'net', 'rt-multi-thread', 'signal'] }
polonius-the-crab = "0.4.2"

[dev-dependencies]
tokio = { version = "1.44.2", features = ['rt', 'net', 'rt-multi-thread', "macros"] }

