[package]
name = "cp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
async-trait = "0.1.88"
async-broadcast = "0.7.2"
chrono = { version = "=0.4.38", features = ['serde'] }
connectorx = { version = "0.4.3", features = [ "src_mysql", "src_postgres", "dst_polars" ] }
crossbeam = "0.8.4"
fern = { version = "0.7.1", features = ['date-based', 'colored'] }
futures = "0.3.31"
log = "0.4.27"
multiqueue = "0.3.2"
polars = { version = "0.45.1", features = [ 'lazy', 'concat_str', 'strings', 'sql', 'json', 'csv' ] }
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ['rt', 'net', 'rt-multi-thread', 'signal', 'macros'] }
reqwest = { version = "0.12.15", features = ['blocking'] }

[dev-dependencies]
httpmock = "0.7.0-rc.1"
