[package]
name = "cp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
async-trait = "0.1.88"
async-broadcast = "0.7.2"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = { version = "=0.4.38", features = ["serde"] }
chrono-tz = "0.10.3"
connectorx = { version = "0.4.3", features = [ "src_mysql", "src_postgres", "dst_polars" ] }
crossbeam = "0.8.4"
fern = { version = "0.7.1", features = ["date-based", "colored"] }
futures = "0.3.31"
log = "0.4.27"
mongodb = { version = "3.2.3", features = ["sync"] }
multiqueue = "0.3.2"
polars = { version = "0.45.1", features = [ "lazy", "concat_str", "strings", "sql", "json", "csv", "dtype-full" ] }
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt", "net", "rt-multi-thread", "signal", "macros"] }
tokio-cron-scheduler = "0.14.0"
reqwest = { version = "0.12.19", features = ["blocking"] }
inserter-x = "0.1.2"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
postgres = "0.19.10"
mysql = { version = "26.0.0", features = ["minimal-rust", "rustls-tls"] }
